--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,4 +111,6 @@ dependencies {
 
     // Image Loading library Coil
     implementation "io.coil-kt:coil:0.13.0"
+
+    compile 'com.squareup.okhttp3:logging-interceptor:4.9.0'
 }
